K8s/mysql-ds.yml
---
# 1. KUBERNETES SERVICE
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  labels:
    app: mysql
spec:
  ports:
    - port: 3306
      targetPort: 3306
      name: mysql
  selector:
    app: mysql
  type: ClusterIP

---
# 2. KUBERNETES DEPLOYMENT (Using emptyDir)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-db
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: mysql-container
          image: mysql:8.0.35
          ports:
            - containerPort: 3306
              name: mysql
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
          
          volumeMounts:
            - name: mysql-temp-storage
              mountPath: /var/lib/mysql

          # Health Probes
          livenessProbe:
            exec:
              command: ["bash", "-c", "mysqladmin ping -u root -p${MYSQL_ROOT_PASSWORD}"]
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            exec:
              command: ["bash", "-c", "mysql -u root -p${MYSQL_ROOT_PASSWORD} -e 'SELECT 1'"]
            initialDelaySeconds: 15
            periodSeconds: 5
            
      # emptyDir volume: Pod ke sath hi banta hai aur Pod ke sath hi delete ho jata hai
      volumes:
        - name: mysql-temp-storage
          emptyDir: {}
